# stabilized-ica

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.cfg.txt  setup.py  stability_study.ipynb  stabilized_ICA.py  transcriptomic_ICA.ipynb
.ipynb_checkpoints/: stability_study-checkpoint.ipynb  transcriptomic_ICA-checkpoint.ipynb
algorithms/: MNN.py  partial_correlations.R  stabilized_ICA.py
docs/: requirements.txt.txt
docs/source/: Examples.rst  ICA.rst  Icasso.rst  Install.rst  MNN.rst  Release Notes.rst  about.rst  conf.py  contents.rst  index.rst  omics.rst  user_guide.rst
docs/source/_examples/: MNIST_classification.ipynb  index.rst  sica_MEG.ipynb  stability_study.ipynb  transcriptomic_ICA.ipynb
docs/source/_examples/.ipynb_checkpoints/: sica_MEG-checkpoint.ipynb
docs/source/modules/: classes.rst
docs/source/sphinxext/: github_link.py
docs/source/themes/scikit-learn-modern/: javascript.html  layout.html  nav.html  theme.conf
examples/: MNIST_classification.ipynb  sica_MEG.ipynb  stability_study.ipynb  transcriptomic_ICA.ipynb
sica/: __init__.py  _whitening.py  annotate.py  base.py  mutualknn.py  singlecell.py
sica/annotate/: _utils.py  reactome.py  toppfun.py
src/sica/: singlecell.py
stabilized_ica.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_StabilizedICA.py
