[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stabilized-ica"
authors = [
    { name = "Nicolas Captier", email = "nicolas.captier@curie.fr" }
]
description = "Stabilized ICA algorithm"
readme = "README.md"
long_description = { file = "README.md" }
long_description_content_type = "text/markdown"
url = "https://github.com/ncaptier/stabilized-ica"
keywords = ["ICA", "stabilization", "mutual-nearest-neighbors"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "joblib>=1.1.0",
    "networkx>=2.7.1",
    "pandas>=1.4.2",
    "python-picard>=0.7",
    "scikit-learn>=1.0.2",
    "tqdm>=4.64.0",
    "umap-learn>=0.5.3",
]
requires-python = ">=3.6"
dynamic = ['version']

[project.optional-dependencies]
dev = ["pytest"]
doc = ["sphinx >= 3.2.1", "sphinx-gallery >= 0.9.0", "numpydoc >= 1.1.0", "nbsphinx >= 0.8.7"]

[project.urls]
homepage = "https://github.com/ncaptier/stabilized-ica"
documentation = "https://stabilized-ica.readthedocs.io/en/latest/"
omics_toolbox = "https://github.com/ncaptier/sica-omics"

[tool.setuptools.dynamic]
version = { attr = "sica.__version__" }

[tool.pytest.ini_options]
addopts = "--showlocals --durations=20 -ra --junit-xml=junit-results.xml --ignore=doc"
markers = ["slow", ]

[tool.black]
line-length = 88
target_version = ['py38', 'py39', 'py310']
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | doc/tutorial
  | doc/_build
  | doc/auto_examples
)/
'''
